<resources>
    <string name="app_name">VK_Business</string>
    <string name="user_name_string">User name</string>
    <string name="user_password">Password</string>
    <string name="sign_in_text">Войти</string>
    <string name="vk_sign_in_text">Войти через ВКонтакте</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="registration_text">Зарегистрироваться</string>
    <string name="planer_label_text">Планер</string>
    <string name="search_label_text">Поиск</string>
    <string name="metricks_label_text">Метрики</string>
    <string name="metrick_label_text">Метрика</string>
    <string name="greetings_text">Здравствуйте, Ксения, найдите то, что Вам нужно!</string>
    <string name="greetings_search_text" />
    <string name="planer_calendar_button_text">Календарь</string>
    <string name="planer_liked_button_text">Сохраненные</string>
    <string name="planer_add_button_text">Новая публикация</string>
    <string name="add_new_publication_date">Назначьте дату публикации</string>
    <string name="download_file_button">ЗАГРУЗИТЬ ФАЙЛ ПУБЛИКАЦИИ</string>
    <string name="input_text_planer_add">Введите текст публикации...</string>
    <string name="make_public_button_text">Опубликовать</string>
    <string name="make_plan_button_text">Запланировать</string>
    <string name="profile_profile_button_text">ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="profile_notifications_button_text">УВЕДОМЛЕНИЯ</string>
    <string name="profile_metrick_button_text">МЕТРИКИ</string>
    <string name="profile_planer_button_text">ПЛАНЕР</string>
    <string name="likes_nav_text">Лайки</string>
    <string name="budget_nav_text">Бюджет</string>
    <string name="reposts_nav_text">Репосты</string>
    <string name="new_peaple_nav_text">Новые люди</string>
    <string name="profile_settings_button">НАСТРОЙКИ</string>
    <string name="registration_login_text">ЛОГИН:</string>
    <string name="registration_password_text">ПАРОЛЬ:</string>
    <string name="registration_photo_text">ФОТО ПРОФИЛЯ:</string>
    <string name="extern_ad">Наружная реклама</string>
    <string name="sm_ad">Реклама в социальных сетях</string>
    <string name="tele_ad">Телевизионная реклама</string>
</resources>