<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_bottom_navigation"
    app:startDestination="@id/search_view2">


    <fragment
        android:id="@+id/search_view2"
        android:name="com.example.vk_business.search.search_view"
        android:label="@string/search_label_text"
        tools:layout="@layout/fragment_search_view2" />

    <fragment
        android:id="@+id/metrick_view2"
        android:name="com.example.vk_business.metrick.metrick_view"
        android:label="@string/metrick_label_text"
        tools:layout="@layout/fragment_metrick_view2" />

    <fragment
        android:id="@+id/planer_view2"
        android:name="com.example.vk_business.planer.planer_view"
        android:label="@string/planer_label_text"
        tools:layout="@layout/fragment_planer2" />

</navigation>