<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogginActivity"
    android:id="@+id/loggin_layout">

    <LinearLayout
        android:id="@+id/main_loggin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/VKB_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/vkb_logo"/>

        <EditText
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_text_form"
            android:drawableStart="@drawable/login_ico_small"
            android:drawablePadding="10dp"
            android:fontFamily="@font/amaranth"
            android:hint="@string/user_name_string"
            android:padding="10dp" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_text_form"
            android:drawableStart="@drawable/password_ico_small"
            android:drawablePadding="10dp"
            android:hint="@string/user_password"
            android:padding="10dp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/sign_in_button_backround"
            android:text="@string/sign_in_text"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/vk_sign_in_button_background"
            android:text="@string/vk_sign_in_text"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:text="@string/forget_password"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:text="@string/registration_text"
                android:textColor="#FF0084"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>