<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">


   <ImageView
       android:id="@+id/image_add_new_publication"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:src="@drawable/empty_foto_mini"
       android:layout_marginBottom="25dp"
       android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/file_new_publication_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/searchview_border"
        android:text="@string/download_file_button"
        android:drawableStart="@drawable/download_file_ico"
        android:drawablePadding="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="10dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/notification_add_new_publication"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/searchview_border"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:minLines="7"
        android:hint="@string/input_text_planer_add"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="40dp"
        >

        <Button
            android:id="@+id/plan_add_new_publication_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableTop="@drawable/plan_ico"
            android:background="@android:color/transparent"
            android:text="@string/make_plan_button_text"/>

        <Button
            android:id="@+id/public_add_new_publication_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableTop="@drawable/public_vector"
            android:background="@android:color/transparent"
            android:text="@string/make_public_button_text"/>

    </LinearLayout>

</LinearLayout>