<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
    android:background="@drawable/app_background_new">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_profile_image"
            android:layout_width="106dp"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="80dp"
            android:src="@drawable/zhena"
            app:civ_border_color="@color/vk_blue_light"
            app:civ_border_width="4dp"
            tools:ignore="MissingConstraints" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/vk_green" />

        <com.smb.glowbutton.NeonButton
            android:id="@+id/profile_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:nb_cornerRadius="15dp"
            app:nb_enableAnimationDuration="500"
            app:nb_gradientEnd="@color/vk_blue_light"
            app:nb_gradientStart="@color/vk_blue_light"
            app:nb_text="@string/profile_profile_button_text"
            app:nb_textStyle="normal" />

        <com.smb.glowbutton.NeonButton
            android:id="@+id/profile_notifications_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            app:nb_cornerRadius="15dp"
            app:nb_enableAnimationDuration="500"
            app:nb_gradientEnd="@color/vk_blue_light"
            app:nb_gradientStart="@color/vk_blue_light"
            app:nb_text="@string/profile_notifications_button_text"
            app:nb_textStyle="normal" />


        <com.smb.glowbutton.NeonButton
            android:id="@+id/profile_metricks_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            app:nb_cornerRadius="15dp"
            app:nb_enableAnimationDuration="500"
            app:nb_gradientEnd="@color/vk_blue_light"
            app:nb_gradientStart="@color/vk_blue_light"
            app:nb_text="@string/profile_metrick_button_text"
            app:nb_textStyle="normal" />


        <com.smb.glowbutton.NeonButton
            android:id="@+id/profile_planer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:nb_cornerRadius="15dp"
            app:nb_enableAnimationDuration="500"
            app:nb_gradientEnd="@color/vk_blue_light"
            app:nb_gradientStart="@color/vk_blue_light"
            app:nb_text="@string/profile_planer_button_text"
            app:nb_textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"
            android:background="@color/vk_green" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.smb.glowbutton.NeonButton
            android:id="@+id/profile_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            app:nb_cornerRadius="15dp"
            app:nb_enableAnimationDuration="500"
            app:nb_gradientEnd="@color/vk_purple"
            app:nb_gradientStart="@color/vk_purple"
            app:nb_text="Q &amp; A"
            app:nb_textStyle="normal" />

    </LinearLayout>

</RelativeLayout>