<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".planer.planer_view">


    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="115dp"
        android:gravity="center"
        android:orientation="vertical" >


        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >


            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/planer_add_button"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableTop="@drawable/new_public_neon"
                    android:paddingTop="15dp"
                    android:text="@string/planer_add_button_text"
                    android:textColor="@color/vk_blue_light"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="3"
                    android:shadowColor="@color/white"/>

                <Button
                    android:id="@+id/planer_calendar_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableTop="@drawable/calendar_neon"
                    android:paddingTop="15dp"
                    android:text="@string/planer_calendar_button_text"
                    android:textColor="@color/vk_blue_light"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="3"
                    android:shadowColor="@color/white"/>/>
            </TableRow>


            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/planer_liked_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableTop="@drawable/saved_neon"
                    android:paddingTop="15dp"
                    android:text="@string/planer_liked_button_text"
                    android:textColor="@color/vk_blue_light"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="3"
                    android:shadowColor="@color/white"/>/>

                <Button
                    android:id="@+id/planer_empty_button1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/calendar"
                    android:clickable="false"
                    android:background="@android:color/transparent"/>
            </TableRow>


            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/planer_empty_button2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:background="@android:color/transparent"/>

                <Button
                    android:id="@+id/planer_empty_button3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/empty"
                    android:clickable="false"
                    android:background="@android:color/transparent"/>
            </TableRow>

        </TableLayout>

    </RelativeLayout>

</FrameLayout>